Case studies added

--- a/ea/ea.tex
+++ b/ea/ea.tex
@@ -1051,6 +1051,52 @@
 	\end{itemize}
 \end{frame}
 
+\section{Case studies}
+
+\subsection{EAs examples}
+
+\subsection{Case study I: Transonic wing shape optimization}
+\begin{frame}{Study case}{Case study I: Transonic wing shape optimization}
+    Problem: Design a wing shape for transonic flight
+        \begin{itemize}
+        \item Maximize lift
+        \end{itemize}
+
+    \setlength{\fboxrule}{0pt}
+    \centering \fbox{\includegraphics[width=0.5\linewidth]{figs/wing-ga.png}} 
+    
+    \small
+    \begin{flushleft}
+    \href{https://link.springer.com/chapter/10.1007/978-94-010-0017-8\_38\#citeas}{Holst T.L., Pulliam T.H. (2003) \textit{Transonic Wing Shape Optimization Using a Genetic Algorithm}. In: IUTAM Symposium Transsonicum IV. Fluid Mechanics and its Applications, vol 73. Springer.}
+    \end{flushleft}
+\end{frame}
+
+%\subsection{Case study II: Mars orbital insertion}
+%\begin{frame}{Study case}{Case study II: Mars orbital insertion}
+%    \setlength{\fboxrule}{0pt}
+%    \fbox{\includegraphics[width=0.7\linewidth]{figs/orbits.jpg}}
+%\end{frame}
+
+\subsection{Case study II: 9\textsuperscript{th} GTOC}
+\begin{frame}{Study case}{Case study II: 9\textsuperscript{th} Global Trajectory Optimization Competition}
+    GTOC: Global Trajectory Optimization Competition
+    \begin{itemize}
+        \item Proposed by ESA Advanced Concepts Team
+        \item Difficult trajectory optimization problems
+	\item \href{https://sophia.estec.esa.int/gtoc_portal/?page_id=814}{(More info)}
+    \end{itemize}
+
+    GTOC 9: The Kesser Run
+    \begin{itemize}
+        \item 123 orbiting debris
+        \item Remove debris
+        \item Design multiple missions
+    \end{itemize}
+    \href{https://www.youtube.com/watch?v=zvxZx-QnqQ0}{(Video)}
+    \href{https://www.youtube.com/watch?v=5CQNG6OIbZM}{(Solution)}
+	\href{https://www.esa.int/gsp/ACT/acta_futura/issue11/}{(\textit{Acta Futura} special issue)}
+\end{frame}
+
 
 
 \end{document}
