--- a/ea/ea.tex
+++ b/ea/ea.tex
@@ -1053,10 +1053,8 @@
 
 \section{Case studies}
 
-\subsection{EAs examples}
-
 \subsection{Case study I: Transonic wing shape optimization}
-\begin{frame}{Study case}{Case study I: Transonic wing shape optimization}
+\begin{frame}{Case studies}{Case study I: Transonic wing shape optimization}
     Problem: Design a wing shape for transonic flight
         \begin{itemize}
         \item Maximize lift
@@ -1078,7 +1076,7 @@
 %\end{frame}
 
 \subsection{Case study II: 9\textsuperscript{th} GTOC}
-\begin{frame}{Study case}{Case study II: 9\textsuperscript{th} Global Trajectory Optimization Competition}
+\begin{frame}{Case studies}{Case study II: 9\textsuperscript{th} Global Trajectory Optimization Competition}
     GTOC: Global Trajectory Optimization Competition
     \begin{itemize}
         \item Proposed by ESA Advanced Concepts Team
@@ -1096,7 +1094,5 @@
     \href{https://www.youtube.com/watch?v=5CQNG6OIbZM}{(Solution)}
 	\href{https://www.esa.int/gsp/ACT/acta_futura/issue11/}{(\textit{Acta Futura} special issue)}
 \end{frame}
-
-
 
 \end{document}
